--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev --respawn --transpile-only --esm src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest --config=jest.config.js"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +32,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "@types/supertest": "^6.0.3",
+    "cross-env": "^10.1.0",
     "jest": "^30.2.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
