--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev --respawn --transpile-only --esm src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.ts"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.js"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +36,7 @@
     "jest": "^30.2.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3"
